trying to solve the race condition between emulator launch and test run