@@ -4,9 +4,10 @@ import com.nishan.mobile.config.ConfigManager;
 import io.appium.java_client.AppiumDriver;
 import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.android.options.UiAutomator2Options;
+import org.openqa.selenium.remote.http.ClientConfig;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.time.Duration;
 
 public class AndroidDriverFactory implements DriverFactory {
 
@@ -22,6 +23,8 @@ public class AndroidDriverFactory implements DriverFactory {
         options.setAppPackage(config.get("android.appPackage"));
         options.setAppActivity(config.get("android.appActivity"));
         options.setNoReset(Boolean.parseBoolean(config.get("android.noReset")));
+        options.setNewCommandTimeout(Duration.ofSeconds(
+                Long.parseLong(config.get("appium.newCommandTimeout"))));
 
         // Step 2 — resolve app path from classpath
         // convert relative path from config → absolute path
@@ -29,13 +32,10 @@ public class AndroidDriverFactory implements DriverFactory {
         options.setApp(appPath);
         // Step 3 — build server URL
         // config.get("appium.url") → new URL(...)
-        URL url = null;
-        try {
-            url = new URL(config.get("appium.url"));
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
-        }
+        ClientConfig clientConfig = ClientConfig.defaultConfig()
+                .baseUri(URI.create(config.get("appium.url")))
+                .readTimeout(Duration.ofSeconds(300));
         // Step 4 — return new AndroidDriver(serverUrl, options)
-        return new AndroidDriver(url, options);
+        return new AndroidDriver(clientConfig, options);
     }
 }
