@@ -4,9 +4,10 @@ import com.nishan.mobile.config.ConfigManager;
 import io.appium.java_client.AppiumDriver;
 import io.appium.java_client.ios.IOSDriver;
 import io.appium.java_client.ios.options.XCUITestOptions;
+import org.openqa.selenium.remote.http.ClientConfig;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.time.Duration;
 
 public class IOSDriverFactory implements DriverFactory {
 
@@ -19,6 +20,8 @@ public class IOSDriverFactory implements DriverFactory {
         options.setAutomationName(config.get("ios.automationName"));
         options.setBundleId(config.get("ios.bundleId"));
         options.setNoReset(Boolean.parseBoolean(config.get("ios.noReset")));
+        options.setNewCommandTimeout(Duration.ofSeconds(
+                Long.parseLong(config.get("appium.newCommandTimeout"))));
         // app path same pattern as Android
         // Step 2 — resolve app path from classpath
         // convert relative path from config → absolute path
@@ -26,13 +29,11 @@ public class IOSDriverFactory implements DriverFactory {
         options.setApp(appPath);
         // Step 3 — build server URL
         // config.get("appium.url") → new URL(...)
-        URL url = null;
-        try {
-            url = new URL(config.get("appium.url"));
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
-        }
+
+        ClientConfig clientConfig = ClientConfig.defaultConfig()
+                .baseUri(URI.create(config.get("appium.url")))
+                .readTimeout(Duration.ofSeconds(300));
         // Step 4 — return new AndroidDriver(serverUrl, options)
-        return new IOSDriver(url, options);
+        return new IOSDriver(clientConfig, options);
     }
 }
